home page mobile finalized

--- a/index.html
+++ b/index.html
@@ -7,31 +7,33 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
-
-
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<title>Página Inicial</title>
 </head>
+
 <body>
 	<header class="header">
-		<a class="home_link" href="#"><img src="images/Casa.png"></a>
-		<a class="message_link" href="#"><img src="images/Mensagens.png"></a>
+		<a class="home_link" href="#"><img src="images/Casa.svg"></a>
+		<a class="message_link" href="#"><img src="images/Mensagens.svg"></a>
 	</header>
 
 	<main>
-		<img class="background1" src="images/background1.png">
+		<img class="background1" src="images/background1.svg">
 		
-		<img class="background2" src="images/background2.png">
+		<img class="background2" src="images/background2.svg">
 
 		<section class="main_content">
-			<img class="logo" src="images/Logo.png" alt="Adotopet">
+			<img class="logo" src="images/Logo.svg" alt="Adotopet">
 			<h1 class="main_title">Boas-vindas!</h1>
 			<p>Que tal mudar sua vida adotando seu novo melhor amigo? Vem com a gente!</p>
 			<a href="" class="main_btn">Já tenho conta</a>
 			<a href="" class="main_btn">Quero me cadastrar</a>
-			<img class="dogs_ilustration" src="images/Ilustração.png">
 		</section>
 	</main>
-	<footer class="footer"> 2022 - Desenvolvido por Alura.</footer>
+
+	<footer class="footer"> 
+		<img class="dogs_ilustration" src="images/Ilustração.svg">
+		<p>2022 - Desenvolvido por Alura.</p>
+	</footer>
 </body>
 </html>
