cadastro link update

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<h1 class="main_title">Boas-vindas!</h1>
 			<p>Que tal mudar sua vida adotando seu novo melhor amigo? Vem com a gente!</p>
 			<a href="" class="main_btn">Já tenho conta</a>
-			<a href="" class="main_btn">Quero me cadastrar</a>
+			<a href="cadastro.html" class="main_btn">Quero me cadastrar</a>
 		</section>
 	</main>
 
