animals list page finished

--- a/login.html
+++ b/login.html
@@ -26,26 +26,20 @@
 
 		<img class="patas" src="images/Patas.svg">
 
-		<section class="main_content">
+		<section class="main_content margin_login">
 			<img class="logo" src="images/Logo2.svg">
-			<h1>Ainda não tem cadastro?</h1>
-			<p>Então, antes de buscar seu melhor amigo, precisamos de alguns dados:</p>
+			<h1>Já tem conta? Faça seu login:</h1>
 		</section>
 
 		<form class="main_form">
 			<label for="email">Email</label>
 			<input type="email" name="email" id="email" required placeholder="Escolha o seu email">
 
-			<label for="nome">Nome</label>
-			<input type="text" name="nome" id="nome" required placeholder="Digite seu nome completo">
-
 			<label for="password">Senha</label>
 			<input type="password" name="password" id="password" required placeholder="Crie uma senha">
+			<a class="esqueci_senha" href="#">Esqueci minha senha</a>
 
-			<label for="password2">Confirme sua senha</label>
-			<input type="password" name="password2" id="password2" required placeholder="Repita a senha cridada acima">
-
-			<a class="main_btn btn" href="#">Cadastrar</a>
+			<a class="main_btn btn" href="#">Entrar</a>
 
 		</form>
 
