--- a/cadastro.html
+++ b/cadastro.html
@@ -45,11 +45,8 @@
 			<label for="password2">Confirme sua senha</label>
 			<input type="password" name="password2" id="password2" required placeholder="Repita a senha cridada acima">
 
-			<a class="main_btn btn" href="#">Cadastrar</a>
-
+			<a class="main_btn btn" href="home.html">Cadastrar</a>
 		</form>
-
-		
 
 	</main>
 
