--- a/login.html
+++ b/login.html
@@ -39,7 +39,7 @@
 			<input type="password" name="password" id="password" required placeholder="Crie uma senha">
 			<a class="esqueci_senha" href="#">Esqueci minha senha</a>
 
-			<a class="main_btn btn" href="#">Entrar</a>
+			<a class="main_btn btn" href="home.html">Entrar</a>
 
 		</form>
 
