--- a/home.html
+++ b/home.html
@@ -7,13 +7,18 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/home.css">
-	<link rel="stylesheet" type="text/css" href="css/main_home.css">
-
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/padrao.css">
+	<link rel="stylesheet" type="text/css" href="css/standard.css">
+	<link rel="stylesheet" type="text/css" href="css/header.css">
+	<link rel="stylesheet" type="text/css" href="css/animallist.css">
+	<link rel="stylesheet" type="text/css" href="css/standard_btn.css">
+	<link rel="stylesheet" type="text/css" href="css/footer.css">
+	<link rel="stylesheet" type="text/css" href="css/backgrounds.css">
 	<title>Home</title>
 </head>
 
-<body>
+<body class="background-home">
 	<header class="header">
 		<a class="home_link" href="#"><img src="images/Casa.svg"></a>
 		<a class="message_link" href="#"><img src="images/Mensagens.svg"></a>
@@ -21,138 +26,161 @@
 	</header>
 
 	<main>
-		<img class="background1" src="images/background1.svg">
-		<h1 class="main_content">Olá! Veja os amiguinhos disponíveis para adoção!</h1>
-
-		<ul class="main_container">
-			<li class="animal_container">
+		<h1 class="standard-content standard-content--animal">Olá! Veja os amigos disponíveis para adoção!</h1>
+		<ul class="main-container">
+			<li class="animal">
 				<img src="images/animals/Dunga.svg">
-				<div class="animal_information">
-					<h2>Dunga</h2>
-					<ul>
-						<li>2 anos</li>
-						<li>Porte pequeno</li>
-						<li>Calmo e educado</li>
+				<div class="animal__information">
+					<h2 class="animal__nome">Dunga</h2>
+					<ul class="lista-descricao">
+						<li class="lista-descricao__item">2 anos</li>
+						<li class="lista-descricao__item">Porte pequeno</li>
+						<li class="lista-descricao__item">Calmo e educado</li>
 					</ul>												
-					<p>Rio de Janeiro (RJ)</p>
-					<a href=""><img src="images/msg_icon.svg"><p>Falar com resposável</p></a>
+					<p class="animal__cidade">Rio de Janeiro (RJ)</p>
+					<a class="animal__link">
+						<img src="images/msg_icon.svg">
+						<p class="animal__link--text">Falar com resposável</p>
+					</a>
 				</div>
 			</li>
 
-			<li class="animal_container">
+			<li class="animal">
 				<img src="images/animals/Felicia.svg">
-				<div class="animal_information">
-					<h2>Felícia</h2>
-					<ul>
-						<li>3 meses</li>
-						<li>Porte pequeno</li>
-						<li>Ativa e carinhosa</li>
+				<div class="animal__information">
+					<h2 class="animal__nome">Felícia</h2>
+					<ul class="lista-descricao">
+						<li class="lista-descricao__item">3 meses</li>
+						<li class="lista-descricao__item">Porte pequeno</li>
+						<li class="lista-descricao__item">Ativa e carinhosa</li>
 					</ul>												
-					<p>Nova Iguaçu (RJ)</p>
-					<a href=""><img src="images/msg_icon.svg"><p>Falar com resposável</p></a>
+					<p class="animal__cidade">Nova Iguaçu (RJ)</p>
+					<a class="animal__link" href="">
+						<img src="images/msg_icon.svg">
+						<p class="animal__link--text">Falar com resposável</p>
+					</a>
 				</div>
 			</li>
 
-			<li class="animal_container">
+			<li class="animal">
 				<img src="images/animals/Sirius.svg">
-				<div class="animal_information">
-					<h2>Sirius</h2>
-					<ul>
-						<li>6 meses</li>
-						<li>Porte grande</li>
-						<li>Ativo e educado</li>
+				<div class="animal__information">
+					<h2 class="animal__nome">Sirius</h2>
+					<ul class="lista-descricao">
+						<li class="lista-descricao__item">6 meses</li>
+						<li class="lista-descricao__item">Porte grande</li>
+						<li class="lista-descricao__item">Ativo e educado</li>
 					</ul>												
-					<p>Duque de Caixas (RJ)</p>
-					<a href=""><img src="images/msg_icon.svg"><p>Falar com resposável</p></a>
+					<p class="animal__cidade">Duque de Caixas (RJ)</p>
+					<a class="animal__link" href="">
+						<img src="images/msg_icon.svg">
+						<p class="animal__link--text">Falar com resposável</p>
+					</a>
 				</div>
 			</li>
 
-			<li class="animal_container">
+			<li class="animal">
 				<img src="images/animals/Fiona.svg">
-				<div class="animal_information">
-					<h2>Fiona</h2>
-					<ul>
-						<li>3 anos</li>
-						<li>Porte pequeno</li>
-						<li>Calma e carinhosa</li>
+				<div class="animal__information">
+					<h2 class="animal__nome">Fiona</h2>
+					<ul class="lista-descricao">
+						<li class="lista-descricao__item">3 anos</li>
+						<li class="lista-descricao__item">Porte pequeno</li>
+						<li class="lista-descricao__item">Calma e carinhosa</li>
 					</ul>												
-					<p>São Gonçalo (RJ)</p>
-					<a href=""><img src="images/msg_icon.svg"><p>Falar com resposável</p></a>
+					<p class="animal__cidade">São Gonçalo (RJ)</p>
+					<a class="animal__link" href="">
+						<img src="images/msg_icon.svg">
+						<p class="animal__link--text">Falar com resposável</p>
+					</a>
 				</div>
 			</li>
 
-			<li class="animal_container">
+			<li class="animal">
 				<img src="images/animals/Sid.svg">
-				<div class="animal_information">
-					<h2>Sid</h2>
-					<ul>
-						<li>8 meses</li>
-						<li>Porte médio/grande</li>
-						<li>Brincalhão e amável</li>
+				<div class="animal__information">
+					<h2 class="animal__nome">Sid</h2>
+					<ul class="lista-descricao">
+						<li class="lista-descricao__item">8 meses</li>
+						<li class="lista-descricao__item">Porte médio/grande</li>
+						<li class="lista-descricao__item">Brincalhão e amável</li>
 					</ul>												
-					<p>Rio de Janeiro (RJ)</p>
-					<a href=""><img src="images/msg_icon.svg"><p>Falar com resposável</p></a>
+					<p class="animal__cidade">Rio de Janeiro (RJ)</p>
+					<a class="animal__link" href="">
+						<img src="images/msg_icon.svg">
+						<p class="animal__link--text">Falar com resposável</p>
+					</a>
 				</div>
 			</li>
 
-			<li class="animal_container">
+			<li class="animal">
 				<img src="images/animals/Yoda.svg">
-				<div class="animal_information">
-					<h2>Yoda</h2>
-					<ul>
-						<li>1 ano</li>
-						<li>Porte médio</li>
-						<li>Ativo e carinhoso</li>
+				<div class="animal__information">
+					<h2 class="animal__nome">Yoda</h2>
+					<ul class="lista-descricao">
+						<li class="lista-descricao__item">1 ano</li>
+						<li class="lista-descricao__item">Porte médio</li>
+						<li class="lista-descricao__item">Ativo e carinhoso</li>
 					</ul>												
-					<p>Rio de Janeiro (RJ)</p>
-					<a href=""><img src="images/msg_icon.svg"><p>Falar com resposável</p></a>
+					<p class="animal__cidade">Rio de Janeiro (RJ)</p>
+					<a class="animal__link" href="">
+						<img src="images/msg_icon.svg">
+						<p class="animal__link--text">Falar com resposável</p>
+					</a>
 				</div>
 			</li>
 
-			<li class="animal_container">
+			<li class="animal">
 				<img src="images/animals/Lua.svg">
-				<div class="animal_information">
-					<h2>Lua</h2>
-					<ul>
-						<li>6 meses</li>
-						<li>Porte médio</li>
-						<li>Ativa e carinhosa</li>
+				<div class="animal__information">
+					<h2 class="animal__nome">Lua</h2>
+					<ul class="lista-descricao">
+						<li class="lista-descricao__item">6 meses</li>
+						<li class="lista-descricao__item">Porte médio</li>
+						<li class="lista-descricao__item">Ativa e carinhosa</li>
 					</ul>												
-					<p>Duque de Caxias (RJ)</p>
-					<a href=""><img src="images/msg_icon.svg"><p>Falar com resposável</p></a>
+					<p class="animal__cidade">Duque de Caxias (RJ)</p>
+					<a class="animal__link" href="">
+						<img src="images/msg_icon.svg">
+						<p class="animal__link--text">Falar com resposável</p>
+					</a>
 				</div>
 			</li>
 
-			<li class="animal_container">
+			<li class="animal">
 				<img src="images/animals/Amora.svg">
-				<div class="animal_information">
-					<h2>Amora</h2>
-					<ul>
-						<li>45 dias</li>
-						<li>Porte grande</li>
-						<li>Calma e carinhosa</li>
+				<div class="animal__information">
+					<h2 class="animal__nome">Amora</h2>
+					<ul class="lista-descricao">
+						<li class="lista-descricao__item">45 dias</li>
+						<li class="lista-descricao__item">Porte grande</li>
+						<li class="lista-descricao__item">Calma e carinhosa</li>
 					</ul>												
-					<p>São Gonçalo (RJ)</p>
-					<a href=""><img src="images/msg_icon.svg"><p>Falar com resposável</p></a>
+					<p class="animal__cidade">São Gonçalo (RJ)</p>
+					<a class="animal__link" href="">
+						<img src="images/msg_icon.svg">
+						<p class="animal__link--text">Falar com resposável</p>
+					</a>
 				</div>
 			</li>
 
-			<li class="animal_container">
+			<li class="animal">
 				<img src="images/animals/Zelda.svg">
-				<div class="animal_information">
-					<h2>Zelda</h2>
-					<ul>
-						<li>5 meses</li>
-						<li>Porte médio</li>
-						<li>Ativa e amável</li>
+				<div class="animal__information">
+					<h2 class="animal__nome">Zelda</h2>
+					<ul class="lista-descricao">
+						<li class="lista-descricao__item">5 meses</li>
+						<li class="lista-descricao__item">Porte médio</li>
+						<li class="lista-descricao__item">Ativa e amável</li>
 					</ul>												
-					<p>Rio de Janeiro (RJ)</p>
-					<a href=""><img src="images/msg_icon.svg"><p>Falar com resposável</p></a>
+					<p class="animal__cidade">Rio de Janeiro (RJ)</p>
+					<a class="animal__link" href="">
+						<img src="images/msg_icon.svg">
+						<p class="animal__link--text">Falar com resposável</p>
+					</a>
 				</div>
 			</li>
 		</ul>
-		
-
 	</main>
 
 	<footer class="footer"> 
