--- a/index.html
+++ b/index.html
@@ -7,32 +7,33 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/home.css">
+	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/padrao.css">
+	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="css/header.css">
+	<link rel="stylesheet" type="text/css" href="css/standard_btn.css">
+	<link rel="stylesheet" type="text/css" href="css/footer.css">
+	<link rel="stylesheet" type="text/css" href="css/backgrounds.css">
 	<title>Página Inicial</title>
 </head>
 
-<body>
+<body class="background-index">
 	<header class="header">
 		<a class="home_link" href="#"><img src="images/Casa.svg"></a>
 		<a class="message_link" href="#"><img src="images/Mensagens.svg"></a>
 	</header>
 
 	<main>
-		<img class="background1" src="images/background1.svg">
-		
-		<img class="background2" src="images/background2.svg">
-
-		<section class="main_content">
-			<img class="logo" src="images/Logo.svg" alt="Adotopet">
-			<h1 class="main_title">Boas-vindas!</h1>
-			<p>Que tal mudar sua vida adotando seu novo melhor amigo? Vem com a gente!</p>
-			<a href="login.html" class="main_btn">Já tenho conta</a>
-			<a href="cadastro.html" class="main_btn">Quero me cadastrar</a>
+		<section class="index-content">
+			<img class="index-content__logo" src="images/Logo.svg" alt="Adotopet">
+			<h1 class="index-content__title">Boas-vindas!</h1>
+			<p class="index-content__text">Que tal mudar sua vida adotando seu novo melhor amigo? Vem com a gente!</p>
 		</section>
+		<a href="login.html" class="index-btn">Já tenho conta</a>
+		<a href="cadastro.html" class="index-btn">Quero me cadastrar</a>
 	</main>
 
 	<footer class="footer"> 
-		<img class="dogs_ilustration" src="images/Ilustração.svg">
 		<p>2022 - Desenvolvido por Alura.</p>
 	</footer>
 </body>
