profile form update

--- a/perfil.html
+++ b/perfil.html
@@ -37,18 +37,23 @@
 			<input class="main-form__input--foto" type="file" name="foto" id="foto" required>
 
 			<label class="main-form__label main-form__label--msgpage" for="nome">Nome</label>
-			<input class="main-form__input main-form__input--msgpage" name="nome" id="nome" required placeholder="Insira seu nome completo">
+			<input class="main-form__input main-form__input--msgpage" name="nome" id="nome"
+					 required placeholder="Insira seu nome completo" value="Joana Magalhães">
 
 			<label class="main-form__label main-form__label--msgpage" for="telefone">Telefone</label>
-			<input class="main-form__input main-form__input--msgpage" type="tel" name="telefone" id="telefone" required placeholder="Insira seu telefone e/ou whatsapp">
+			<input class="main-form__input main-form__input--msgpage" type="tel" name="telefone" id="telefone"
+					 required placeholder="Insira seu telefone e/ou whatsapp" value="55 11 XXXXXXXXX">
 
-			<label class="main-form__label main-form__label--msgpage" for="nome-animal">Nome do animal</label>
-			<input class="main-form__input main-form__input--msgpage" name="nome-animal" id="nome-animal" required placeholder="Por qual animal você se interessou?">
+			<label class="main-form__label main-form__label--msgpage" for="cidade">Cidade</label>
+			<input class="main-form__input main-form__input--msgpage" name="cidade" id="cidade" required
+					 value="São Paulo">
 
-			<label class="main-form__label main-form__label--msgpage" for="mensagem">Mensagem</label>
-			<textarea class="main-form__input main-form__input--msgpage main-form__input--mensagem" type="password" name="mensagem" id="mensagem" required placeholder="Escreva sua mensagem."></textarea>
+			<label class="main-form__label main-form__label--msgpage" for="sobre">Sobre</label>
+			<textarea class="main-form__input main-form__input--msgpage main-form__input--mensagem" name="sobre"
+						 id="sobre" required placeholder="Escreva sobre você.">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati.
+			</textarea>
 
-			<a class="standard-btn" href="home.html">Enviar</a>
+			<input class="standard-btn" type="submit" value="Salvar">
 		</form>
 	</main>
 
